# bangkok-temples-flashcards

./: .gitignore  COORDINATE_VERIFICATION_METHODOLOGY.md  Cargo.toml  bangkok-temples-data.md  bangkok-temples.json  coordinates-verification.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/flashcard/temples/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  styles.xml
src/: lib.rs
