[package]
name = "temples-core"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = { version = "0.28", features = ["macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
strip = true
